<resources>
    <string name="app_name">Medi Check</string>
    <string name="facebook_app_id">884936089050476</string>
    <string name="fb_login_protocol_scheme">fb884936089050476</string>
    <string name="title_activity_dashboard_drawer">DashboardDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Medi Check</string>
    <string name="nav_header_subtitle">MTU Group Project</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_ratings">Ratings</string>
    <string name="menu_logout">Log Out</string>
    <string name="ratings">Ratings</string>
    <string name="submit_rating">submit rating</string>
    <string name="describe_your_experience_optional">Describe your experience (optional)</string>
    <string name="your_gp_contact_details">Gp Contacts</string>
    <string name="your_insurance_contact_details">Insurance Contacts</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="phone_nr">Phone Nr:</string>
    <string name="weight_kg">Weight (KG)</string>
    <string name="height_cm">Height (cm)</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="full_name">Full Name</string>
    <string name="profile_setup">Profile Setup</string>
    <string name="diabetes">Diabetes</string>
    <string name="pregnancy_times">Pregnancy Times</string>
    <string name="glucose">Glucose</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="skin_thickness">Skin Thickness</string>
    <string name="insulin">Insulin</string>
    <string name="bmi">BMI</string>
    <string name="diabetes_pedigree_function">Diabetes Pedigree Function</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="password_reset">Password Reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="medi_check">Medi-Check</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="email1">Email</string>
    <string name="alzheimers" >Alzheimers</string>
    <string name="dominant_hand" >Dominant Hand</string>
    <string name="education_level" >Education Level</string>
    <string name="socioeconomic_status" >Socioeconomic Status</string>
    <string name="mini_mental_state_examination" >Mini Mental State Examination</string>
    <string name="clinical_dementia_rating" >Clinical Dementia Rating</string>
    <string name="estimated_total_intracranial_volume" >Estimated Total Intracranial Volume</string>
    <string name="normalize_whole_brain_volume" >Normalize Whole Brain Volume</string>
    <string name="loading">Loading...</string>
    <string name="loadingRisk">Risk: Loading...</string>
    <string name="asf">ASF</string>
    <string name="alzheimer_s">Alzheimer\'s</string>
    <string name="heart_disease">Heart Disease</string>
    <string name="home">Home</string>
    <string name="predict">Predict</string>
    <string name="risk_undiagnosed">Risk: Undiagnosed</string>
    <string name="model_info">Model Info</string>
    <string name="support">Support</string>
    <string name="enter_support_subject_here">Enter support subject here</string>
    <string name="enter_support_message_here">Enter support message here</string>
    <string name="mdt_portal">MDT Portal</string>

</resources>