<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_diabetes"
            android:icon="@drawable/ic_baseline_medical_services_24"
            android:title="Diabetes" />
        <item
            android:id="@+id/nav_alzheimers"
            android:icon="@drawable/ic_baseline_medical_services_24"
            android:title="Alzheimer's" />
        <item
            android:id="@+id/nav_heartDisease"
            android:icon="@drawable/ic_baseline_medical_services_24"
            android:title="Heart Disease" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_baseline_contacts_24"
            android:title="@string/menu_contacts" />
        <item
            android:id="@+id/nav_ratings"
            android:icon="@drawable/ic_baseline_star_24"
            android:title="@string/menu_ratings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_logout"/>
    </group>
</menu>