<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2a324b"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <TextView
            android:id="@+id/diabetes_data_setup_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/diabetes"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="48sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pregnancy_editText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/pregnancy_times"
            android:inputType="number"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:textColorHint="#888888" />


        <EditText
            android:id="@+id/glucose_editText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/glucose"
            android:inputType="number"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:textColorHint="#888888" />

        <EditText
            android:id="@+id/bloodPressure_editText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/blood_pressure"
            android:inputType="number"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:textColorHint="#888888" />

        <EditText
            android:id="@+id/skinThickness_editText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/skin_thickness"
            android:inputType="number"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:textColorHint="#888888" />

        <EditText
            android:id="@+id/insulin_editText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/insulin"
            android:inputType="number"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:textColorHint="#888888" />

        <EditText
            android:id="@+id/BMI_editText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/bmi"
            android:inputType="numberDecimal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:textColorHint="#888888" />

        <EditText
            android:id="@+id/diabetesPedigreeFunction_editText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/diabetes_pedigree_function"
            android:inputType="numberDecimal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:textColorHint="#888888" />

        <EditText
            android:id="@+id/age_editText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="number"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:textColorHint="#888888" />

        <Button
            android:id="@+id/diabetes_form_popup_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#b23a48"
            android:text="@string/save"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/diabetes_form_popup_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#b23a48"
            android:text="@string/cancel"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</ScrollView>