<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2a324b"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:id="@+id/alzheimers_data_setup_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/diabetes"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="48sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/alzheimers_form_popup_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#FF0000"
            android:text="@string/save"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/alzheimers_form_popup_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#FF0000"
            android:text="@string/cancel"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</ScrollView>