<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2a324b"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="0dp">

    <TextView
        android:id="@+id/log_in_title1"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        android:text="@string/medi_check"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/log_in_title2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/log_in_title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/log_in_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_title1" />

    <EditText
        android:id="@+id/log_in_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/ic_email"
        android:drawableTint="#888888"
        android:ems="10"
        android:hint="@string/email1"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="#000000"
        android:textColorHint="#888888"
        app:layout_constraintBottom_toTopOf="@+id/log_in_pw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_title2" />

    <EditText
        android:id="@+id/log_in_pw"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/ic_lock"
        android:drawableTint="#888888"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="#000000"
        android:textColorHint="#888888"
        app:layout_constraintBottom_toTopOf="@+id/forgot_pw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_email" />

    <TextView
        android:id="@+id/forgot_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/log_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_pw" />

    <Button
        android:id="@+id/log_in_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#b23a48"
        android:text="@string/log_in"
        android:textColor="#FFFFFF"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toTopOf="@+id/login_text_or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pw" />

    <TextView
        android:id="@+id/dont_have_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sign_up_redirect"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_sign_in_button" />

    <TextView
        android:id="@+id/sign_up_redirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/sign_up"
        android:textColor="#b23a48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dont_have_acc"
        app:layout_constraintTop_toBottomOf="@+id/google_sign_in_button" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_text_or" />

    <TextView
        android:id="@+id/login_text_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/or"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/google_sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_button" />

</androidx.constraintlayout.widget.ConstraintLayout>