<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2A324B"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".Register"
    tools:layout_editor_absoluteX="-120dp"
    tools:layout_editor_absoluteY="-99dp">

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/already_have_an_acc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_or">

    </com.google.android.gms.common.SignInButton>

    <TextView
        android:id="@+id/sign_up_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/google_sign_up_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />

    <TextView
        android:id="@+id/sign_up_title1"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/medi_check"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_title2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign_up_title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_title1" />


    <EditText
        android:id="@+id/sign_up_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/ic_email"
        android:drawableTint="#888888"
        android:ems="10"
        android:hint="@string/email1"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="#000000"
        android:textColorHint="#888888"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_pw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_title2" />


    <EditText
        android:id="@+id/sign_up_pw"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/ic_lock"
        android:drawableTint="#888888"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="#000000"
        android:textColorHint="#888888"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_email" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="#b23a48"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_pw" />

    <TextView
        android:id="@+id/already_have_an_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/log_in_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/log_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="#b23a48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/already_have_an_acc" />

</androidx.constraintlayout.widget.ConstraintLayout>